--- a/lottery-web/src/main/resources/templates/xjssc.html
+++ b/lottery-web/src/main/resources/templates/xjssc.html
@@ -17,8 +17,8 @@
 
 <body style="height: 100%;">
 	<script type="text/javascript">
-		var globalGameCode = 'CQSSC';
-		var globalGameName = '重庆时时彩';
+		var globalGameCode = 'XJSSC';
+		var globalGameName = '新疆时时彩';
 	</script>
 	<div class="container">
 		<div th:replace="common/header::html"></div>
