--- a/lottery-admin/src/main/resources/static/css/common/common.css
+++ b/lottery-admin/src/main/resources/static/css/common/common.css
@@ -4,6 +4,22 @@
 	display: none;
 }
 
+.modal-mask {
+	position: fixed;
+	z-index: 9998;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: table;
+	transition: opacity .3s ease;
+}
+
+.modal-wrapper {
+	display: table-cell;
+	vertical-align: middle;
+}
+
 .fixed-table-header {
 	background-color: #dedede;
 }
