--- a/lottery-web/src/main/resources/templates/common/header.html
+++ b/lottery-web/src/main/resources/templates/common/header.html
@@ -115,7 +115,7 @@
 					<ul class="navbar-nav">
 						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">请选择彩票种类</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#">Link 1</a> <a class="dropdown-item" href="#">Link 2</a> <a class="dropdown-item" href="#">Link 3</a>
+								<a class="dropdown-item" href="#" v-for="game in games" v-on:click="goTo('/' + game.gameCode.toLowerCase())">{{game.gameName}}</a>
 							</div></li>
 						<li class="nav-item" v-on:click="goTo('/')"><a class="nav-link" href="#">首页</a></li>
 						<li class="nav-item"><a class="nav-link" href="#">购彩大厅</a></li>
@@ -149,13 +149,23 @@
 				userName : '',
 				password : '',
 				balance : '',
+				games : []
 			},
 			computed : {},
 			created : function() {
 				this.currentPathName = window.location.pathname;
 				this.getUserAccountInfo();
+				this.findAllOpenGame();
 			},
 			methods : {
+
+				findAllOpenGame : function() {
+					var that = this;
+					that.$http.get('/game/findAllOpenGame').then(function(res) {
+						that.games = res.body.data;
+					});
+				},
+
 				goTo : function(url) {
 					window.location.href = url;
 				},
